# squeekboard

./: .gitlab-ci.yml  Cargo.deps.newer  Cargo.deps.online  Cargo.lock.newer  Cargo.toml  Cargo.toml.in  NEWS.md  configure.ac  meson.build  meson_options.txt
data/: common.css  sm.puri.Squeekboard.desktop.in.in  squeekboard.gresources.xml
debian/: changelog  control  control-newer  copyright  librem5-ci.yml  rules  squeekboard.install  squeekboard.user.service
doc/: hacking.md  index.md  layouts.md  tutorial.md
eek/: Makefile.am  eek-gtk-keyboard.c  eek-gtk-keyboard.h  eek-keyboard-drawing.c  eek-keyboard.c  eek-keyboard.h  eek-keysym.h  eek-renderer.c  eek-renderer.h  eek-serializable.c  eek-theme-node.c  eek-types.h  eek-wkb-0.90.pc.in  eek-wkb-layout.c  eek-wkb-layout.h  eek-wkb.h  eek-wkl-0.90.pc.in  eek-wkl-layout.c  eek-wkl-layout.h  eek-wkl.h  eek-xkb-layout.c  eek-xkb-layout.h  eek-xkl-layout.c  eek-xkl-layout.h  eek-xml-layout.c  layersurface.c
eekboard/: Makefile.am  eekboard-context-service.c  eekboard-context-service.h  key-emitter.c
examples/: find_orphan_layouts.rs
po/: LINGUAS  be.po  cs.po  de.po  el.po  eu.po  fr.po  hi.po  hr.po  ru.po
protocols/: meson.build
src/: Makefile.am  action.rs  animation.rs  assert_matches.rs  client.c  config.h.in  data.rs  drawing.rs  float_ord.rs  imservice.c  imservice.rs  keyboard.rs  layout.h  layout.rs  lib.rs  locale_config.rs  logging.rs  main.h  main.rs  manager.rs  meson.build  outputs.rs  panel.c  panel.h  panel.rs  popover.h  popover.rs  receiver.rs  resources.rs  server-context-service.c  state.rs  (+14 more)
(+44 files in other folders)
